build: General overhaul
Modernize, split into more convention plugins, apply more build quality
plugins, and apply general build stability improvements.