@@ -1,6 +1,8 @@
 plugins {
-    id("kotlin-conventions")
+    // Apply precompiled script plugins.
+    id("kotlin-jvm-conventions")
 
+    // Apply core plugins.
     application
 }
 
@@ -10,7 +12,33 @@ application {
 }
 
 dependencies {
-    implementation(projects.lib)
-
     implementation(libs.clikt)
+    implementation(projects.lib)
+}
+
+tasks.withType<JavaExec>().configureEach {
+    jvmArgs = buildList {
+        // See https://openjdk.org/jeps/424.
+        if (javaVersion.isCompatibleWith(JavaVersion.VERSION_19)) {
+            add("--enable-native-access=ALL-UNNAMED")
+        }
+    }
+
+    val normalizedName = name.trimEnd { !it.isLetter() }.lowercase()
+
+    // Work around https://youtrack.jetbrains.com/issue/KTIJ-34755.
+    if (normalizedName.endsWith("main") || normalizedName.endsWith("run")) {
+        outputs.upToDateWhen { false }
+    }
+}
+
+tasks.named<JavaExec>("run") {
+    System.getenv("TERM")?.also {
+        val mode = it.substringAfter('-', "16color")
+        environment("FORCE_COLOR" to mode)
+    }
+
+    System.getenv("COLORTERM")?.also {
+        environment("FORCE_COLOR" to it)
+    }
 }
